# src/main/java/com/gft/products/domain/model/PricePage.java
@@ -1,0 +1,23 @@
+package com.gft.products.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Getter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode
+public class PricePage {
+
+  private List<Price> prices;
+  private int page;
+  private int size;
+  private long totalElements;
+  private int totalPages;
+}
