# src/main/java/com/gft/products/domain/model/ProductPriceHistory.java
@@ -1,0 +1,25 @@
+package com.gft.products.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Getter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode
+public class ProductPriceHistory {
+
+  private String name;
+  private String description;
+  private List<Price> prices;
+  private int page;
+  private int size;
+  private long totalElements;
+  private int totalPages;
+}
